# controller

./: .devcontainer.json  .dockerignore  .gitignore  .gitmodules  6.0.0  =1.49.1  INSTALL.md  MANIFEST.in  README.md  docker-compose.yml  nrp_docker-compose-nest-pybullet.yaml  nrp_simulation_config_nest_docker_compose.json  nrp_tf_from_nest_to_bullet.py  plant_plotting.py  pyproject.toml
.github/workflows/: ci.yml  publish-minjerk.yml
artifacts/m1/: config.yaml  trained_weights.npz  training_loss.npy
artifacts/pfc_planner/: trained_gle_planner.json  trained_gle_trajectory_generator.pth
built_custom_stdp/: Makefile
cerebellum_configurations/: forward.yaml  inverse.yaml  microzones_complete_nest.yaml
complete_control/: __init__.py  complete.music  draw_schema.py  main_simulation.py  music_start_sim.py  neural_simulation_lib.py  nrp_bullet_engine.py  nrp_bullet_engine_bk.py  nrp_client_sim.py  nrp_neural_engine.py  nrp_neural_engine_bk.py  nrp_start_sim.py  nrp_status_function.py  nrp_tf_from_bullet.py  nrp_tf_from_nest_to_bullet.py  plot_from_run.py  receiver_plant.py  run_trials.py
complete_control/config/: MasterParams.py  ResultMeta.py  __init__.py  connection_params.py  core_models.py  module_params.py  nrp_sim_config.py  paths.py  plant_config.py  population_params.py
complete_control/deprecated/: body.py  brain.py  old_receiver_plant_with_fixes.py  robot1j.py  settings.py  simulation.py
complete_control/neural/: Cerebellum.py  CerebellumHandler.py  CerebellumHandlerPopulations.py  CerebellumPopulations.py  Controller.py  ControllerPopulations.py  NestClient.py  __init__.py  data_handling.py  motorcortex.py  nest_adapter.py  neural_models.py  plot_utils.py  population_utils.py  population_view.py  result_models.py  stateestimator.py
complete_control/plant/: __init__.py  plant_models.py  plant_plotting.py  plant_simulator.py  plant_utils.py  robot1j.py  robotic_plant.py  sensoryneuron.py
complete_control/shared/minjerk/: pyproject.toml
complete_control/shared/minjerk/minjerk_dynamics/: __init__.py  dynamics.py  trajectory.py
complete_control/utils_common/: __init__.py  draw_schema.py  draw_schema_svg.py  generate_signals.py  generate_signals_gle.py  generate_signals_minjerk.py  results.py  trj_ext.csv  trj_flex.csv  utils.py
docker/: Dockerfile  bullet_muscle_sim.Dockerfile  constraints.txt  entrypoint.sh  requirements.txt  requirements_nrp.txt  requirements_planner.txt
embodiment_assets/: skeleton.sdf  skeleton.urdf
near_nes_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_and_export.sh  plot_connectivity.py
scripts/hpc/: sim.slurm
scripts/utilities/: build_and_export.sh  recompile_network.sh
tests/: test_mpi4py.py
tests/tests_neurons/: test_dif_simple.py
tests/tests_plasticity/: test_Aminus_alpha.py  test_Aminus_sinexp.py  test_Aplus_alpha.py  test_Aplus_sinexp.py  test_complex_Gr_spike_alpha.py  test_complex_Gr_spike_sinexp.py  test_general_alpha.py  test_general_sinexp.py  test_kernel_alpha.py  test_kernel_sinexp.py  test_null_parameters_alpha.py  test_null_parameters_sinexp.py  test_offset_encoding_alpha.py  test_offset_encoding_sinexp.py  test_silent_GrC_alpha.py  test_silent_GrC_sinexp.py  test_simple_Gr_spike_alpha.py  test_simple_Gr_spike_sinexp.py  validation_synapse_alpha.py  validation_synapse_sinexp.py
tests_POCs/: check_weight_ev.py  load_plant_data_example.py  manual_anim.py  state.nestml  state_testing.py
tests_POCs/rb/: plotting.py  show_output_vs_sens.py  testrb.py
(+3 files in other folders)
